--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
+    "bulma": "^0.7.2",
     "react": "^16.6.3",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0"
